chore(EIDOMNI-6): Fix Sonar findings